# openmbv

mbxmlutils/: CMakeLists.txt  mbxmlutils.pc.in  mbxmlutilsbase.pc.in  mbxmlutilshelper.pc.in
mbxmlutils/mbxmlutils/: eval.cc
mbxmlutils/mbxmlutilshelper/: CMakeLists.txt
openmbvcppinterface/: CMakeLists.txt  openmbvcppinterface.pc.in
openmbvcppinterface/openmbvcppinterface/: CMakeLists.txt  config.h.in
